# zread-mcp

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  server.json  zread-mcp-server.js  zread_mcp_server.py
